Pridanie ExpeditionPresentation componentu

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -12,18 +12,18 @@
                 <h2 class="presentation-subtitle text-center">Since 2015</h2>
             </div>
         </div>
-      <!-- <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
+        <!-- <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
         <h6 class=" category-absolute ml-auto mr-auto">Designed by Kubis
         </h6>--> 
     </div>
     <div class="main">
-      <app-menu></app-menu>
+      <app-expedition-menu-item></app-expedition-menu-item> 
+      <app-expedition-presentation></app-expedition-presentation>
       <div class="section">
           <div class="container">
               <div class="row">
                   <div class="col-md-6">
-                      <div class="tim-title">
-                        
+                      <div class="tim-title">  
                   </div>
               </div>
               <br/>
