Zlúčenie modulov a pridanie routovania.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,12 +4,11 @@
             <nav class="footer-nav">
                 <ul>
                     <li><a href="">PT Project</a></li>
-                    <li><a href="">Blog</a></li>
                 </ul>
             </nav>
             <div class="credits ml-auto">
                 <span class="copyright">
-                    © {{test | date: 'yyyy'}}, made by LnK Devs
+                    © {{test | date: 'yyyy'}}, vytvorili Lukáš Meňhert a Vladimír Kubica
                 </span>
             </div>
         </div>
