--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,33 +1,33 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="300">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="">TP Project</a>
+            <a class="navbar-brand" href="">PT Project</a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
-               <!-- <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
-                <span class="navbar-toggler-bar"></span>-->
+                <span class="navbar-toggler-bar"></span>
+                <span class="navbar-toggler-bar"></span>
             </button>
         </div>
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Sleduj nás na Facebooku" data-placement="bottom" href="https://www.facebook.com/" target="_blank">
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Sleduj nás na Instagrame" data-placement="bottom" href="https://www.instagram.com/" target="_blank">
                         <i class="fa fa-instagram"></i>
                         <p class="d-lg-none">Instagram</p>
                     </a>
                 </li>
 
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a href="" class="nav-link" target="_blank">O nás</a>
+                    <a [routerLink]="['/about']" class="nav-link">O nás</a>
                 </li>
                 <li class="nav-item" *ngIf="isHome()">
-                    <a href="" class="nav-link" target="_blank">Články</a>
+                    <a [routerLink]="['/blog']" class="nav-link">Články</a>
                 </li>
             </ul>
         </div>
