--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,19 @@
-<p>O nás!</p>
+<div class="page-header section-light" style="background-image: url('assets/img/bckabout.jpg')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">O nás</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center"></h2>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+           <!-- <app-expedition-menu-item></app-expedition-menu-item> -->
+        </div>
+    </div>
+</div>
+
+
