--- a/src/app/components/expedition-menu-item/expedition-menu-item.component.html
+++ b/src/app/components/expedition-menu-item/expedition-menu-item.component.html
@@ -1,9 +1,7 @@
 <div>
-    <div class="section section-buttons"></div>
-        <div class="container">    
     <h1>{{expedition.title}}</h1>
     <p>{{expedition.description}}</p>
-    <div>{{expedition.dateFrom}} - {{expedition.dateTo}}</div>
+    <!--{{expedition.dateFrom}} - {{expedition.dateTo}}</div>-->
     <ul>
         <li *ngFor="let state of expedition.states">{{state}}</li>
     </ul>
