--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,1 +1,9 @@
-<p>Články!</p>
+<div class="page-header section-light" style="background-image: url('assets/img/.jpg')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">Články</h1>
+        </div>
+      <!-- <h2 class="presentation-subtitle text-center">3.8 - 9.8</h2>--> 
+    </div>
+</div>
