--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,4 +20,122 @@
     </div>
 </div>
 
+<div class="page-header section-light" style="background-image: url('assets/img/bcksk.jpg')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">Slovensko 2015</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center">24.7 - 26.7</h2>
+    </div>
+</div>
 
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <app-svk1></app-svk1> 
+        </div>
+        <br/>
+
+    </div>
+</div>
+
+<div class="page-header section-light" style="background-image: url('assets/img/bckbalkan6.JPG')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">Balkan 2016</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center">16.7 - 23.7</h2>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <app-expedition-menu-item></app-expedition-menu-item> 
+        </div>
+        <br/>
+
+    </div>
+</div>
+
+<div class="page-header section-light" style="background-image: url('assets/img/Bckexp.jpg')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">Nórsko 2017</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center">15.7 - 29.7</h2>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <app-expedition-menu-item></app-expedition-menu-item> 
+        </div>
+        <br/>
+
+    </div>
+</div>
+
+<div class="page-header section-light" style="background-image: url('assets/img/bckitfrs.JPG')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">IT, FR, ES 2018</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center">15.7 - 27.7</h2>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <app-expedition-menu-item></app-expedition-menu-item> 
+        </div>
+        <br/>
+
+    </div>
+</div>
+
+<div class="page-header section-light" style="background-image: url('assets/img/bckir.jpg')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">Írsko 2019</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center">3.8 - 9.8</h2>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <app-expedition-menu-item></app-expedition-menu-item> 
+        </div>
+        <br/>
+
+    </div>
+</div>
+
+<div class="page-header section-light" style="background-image: url('assets/img/.jpg')">
+    <div class="content-center">
+        <div class="container">
+            <div class="title-brand"></div> 
+            <h1 class="presentation-title">Slovensko 2020</h1>
+        </div>
+        <h2 class="presentation-subtitle text-center">Coming soon</h2>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <app-expedition-menu-item></app-expedition-menu-item> 
+        </div>
+        <br/>
+
+    </div>
+</div>
