--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,7 +26,7 @@
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a [routerLink]="['/about']" class="nav-link">O nás</a>
                 </li>
-                <li class="nav-item" *ngIf="isHome()">
+                <li class="nav-item" *ngIf="!isDocumentation()">
                     <a [routerLink]="['/blog']" class="nav-link">Články</a>
                 </li>
             </ul>
