--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -27,17 +27,7 @@
                     <a [routerLink]="['/about']" class="nav-link">O nás</a>
                 </li>
                 <li class="nav-item">
-                    <div ngbDropdown class="d-inline-block dropdown">
-                        <a class="nav-link" ngbDropdownToggle>Články</a>
-                        <div ngbDropdownMenu aria-labelledby="dropdownMenu" class="dropdown-menu">
-                            <a class="dropdown-item">Slovensko 2015</a>
-                            <a class="dropdown-item">Balkán 2016</a>
-                            <a class="dropdown-item">Nórsko 2017</a>
-                            <a class="dropdown-item">Západna Európa 2018</a>
-                            <a class="dropdown-item">Írsko 2019</a>
-                            <a class="dropdown-item">Slovensko 2020</a>
-                        </div>
-                    </div>
+                    <a [routerLink]="['/blog']" class="nav-link">Články</a>
                 </li>
             </ul>
         </div>
