Moving project snapshot

--- a/src/app/components/expedition-preview/expedition-preview.component.html
+++ b/src/app/components/expedition-preview/expedition-preview.component.html
@@ -1,6 +1,9 @@
 <div class="component-wrap">
-    <div class="page-header section-light" style="background-image: url({{expedition.previewPhotoUrls[0]}})">
-        <div class="container top">
+    <div class="parallax">
+        <div class="parallax__layer parallax__layer--back" >
+            <div class="image-cover expedition-impression" style="background-image: url({{expedition.previewPhotoUrls[0]}})"></div>
+        </div>
+        <div class="parallax__layer parallax__layer--base">
             <div class="col-sm-12">
                 <h1 class="top black-bg">{{expedition.title}}</h1>
                 <br>
