--- a/src/app/components/expedition-preview/expedition-preview.component.scss
+++ b/src/app/components/expedition-preview/expedition-preview.component.scss
@@ -33,3 +33,8 @@ button.expedition-more {
     justify-content: center;
     flex-direction: row;
 }
+
+.expedition-impression {
+    height: 60vh;
+}
+
