--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,35 +1,22 @@
+<nav class="app-navigation"  [ngClass]="scrolledWindowHeight ? 'color-theme' : 'color-theme' ">
+    <div class="nav-shadow">
+        <div class="navbar-inner container">
+            <!-- Logo -->
+            <div id="navbar-logo">
+                <a class="navbar-brand" href="#">PT Project</a>
+            </div>
 
-<nav class="navbar navbar-expand-lg bg-primary fixed-top nav-down navbar-transparent" color-on-scroll="300">
-    <div class="container" id="menu-dropdown">
-        <div class="navbar-translate">
-            <a class="navbar-brand" href="#">PT Project</a>
-            <button class="navbar-toggler navbar-toggler-right"  type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-menu">
-            <ul class="navbar-nav ml-auto">
-              <!--  <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Sleduj nás na Facebooku" data-placement="bottom" href="" target="_blank">
-                        <i class="fa fa-facebook-square"></i>
-                        <p class="d-lg-none">Facebook</p>
-                    </a>
-                </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Sleduj nás na Instagrame" data-placement="bottom" href="" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                        <p class="d-lg-none">Instagram</p>
-                    </a>
-                </li> --> 
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a [routerLink]="['/about']" class="nav-link">O nás</a>
-                </li>
-                <li class="nav-item">
-                    <a [routerLink]="['/blog']" class="nav-link">Články</a>
-                </li>
-            </ul>
+            <!-- Menu options -->
+            <div id="navbar-menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a [routerLink]="['/about']" class="nav-link">O Nás</a>
+                    </li>
+                    <li class="nav-item">
+                        <a [routerLink]="['/blog']" class="nav-link">Články</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
